--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,9 @@
 	"deno.unstable": true,
 	"deno.suggest.imports.hosts": {
 		"https://deno.land": true
+	},
+	"[typescript]": {
+		"editor.defaultFormatter": "denoland.vscode-deno",
+		"editor.formatOnSave": true
 	}
 }
