--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
 	"tasks": {
-		"test": "deno test --allow-read --coverage=coverage --ignore=src/testcases.ts",
+		"test": "deno test --allow-read --coverage=coverage --ignore=lib/legacy",
 		"lcov": "deno coverage coverage --lcov --output=coverage/report.lcov",
 		"cover": "deno task clean && deno task test && deno task lcov && genhtml -o coverage/html coverage/report.lcov",
 		"build": "deno run -A scripts/build_npm.ts",
